--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         sketch 
                         <i class="fa-solid fa-wifi"></i>
                     </span>
-                    <span class="time">12:46</span>
+                    <span class="time"></span>
                     <span class="battery">
                         100%
                         <i class="fa-solid fa-battery-full"></i>
@@ -62,6 +62,10 @@
                 <div class="btn btn-shuffle">
                     <i class="fa-solid fa-shuffle"></i>
                 </div>
+            </div>
+            <div class="volume">
+                <i class="fa-solid fa-volume-high volume-icon"></i>
+                <input type="range" class="change-volume" value="100" step="1" min="0" max="100">
             </div>
 
             <input id="progress" class="progress" type="range" value="0" step="1" 
@@ -113,6 +117,7 @@
     <script>
         const $ = document.querySelector.bind(document)
         const $$ = document.querySelectorAll.bind(document)
+
         const player = $('.player')
         const heading = $('header h2')
         const cdThumb = $('.cd-thumb')
@@ -127,6 +132,9 @@
         const repeatBtn = $('.btn-repeat')
         const song = $('.song')
         const playlist = $('.playlist')
+        const time = $('.time')
+        const volume = $('.change-volume')
+        const volumeIcon = $('.volume-icon')
 
         
         const app = {
@@ -206,7 +214,7 @@
             render: function(){
                 const htmls = this.songs.map((song, index) => {
                     return `
-                        <div class="song ${index === this.currentIndex ? 'active' : ''}">
+                        <div class="song ${index === this.currentIndex ? 'active' : ''}" data-index=${index}>
                                 <div class="thumb" style="background-image: 
                                 url('${song.image}');"></div>
                                 <div class="body">
@@ -304,6 +312,7 @@
                 progress.oninput = (e)=>{
                     const seekTime = e.target.value*audio.duration/100
                     audio.currentTime = seekTime
+                    audio.play()
                 }
 
                 // Khi next bai hat
@@ -351,7 +360,23 @@
 
                 // Lang nghe hanh vi click vao playlist
                 playlist.onclick = (e)=>{
-                    
+                    const songNode = e.target.closest('.song:not(.active)')
+                    // Xu ly khi click bai hat se chuyen den bai hat do
+                    if(songNode || e.target.closest('.option')){
+                        if(songNode){
+                            app.currentIndex = Number(songNode.dataset.index)
+                            app.loadCurrentSong()
+                            app.render()
+                            audio.play()
+                        }
+                        if(e.target.closest('.option')){}
+                    }
+                }
+
+                volume.oninput = (e)=>{
+                    const vol = e.target.value
+                    audio.volume = vol/100
+                    app.updateVolumeIcon(vol)
                 }
             },
 
@@ -408,6 +433,24 @@
                 }, 150)
             },
 
+            currentTime: function(){
+                const now = new Date()
+                const hours = now.getHours().toString().padStart(2, '0')
+                const minutes = now.getMinutes().toString().padStart(2, '0')
+                time.textContent = `${hours}:${minutes}`
+            },
+
+            updateVolumeIcon: function(volumeValue){
+                if (volumeValue == 0) {
+                    volumeIcon.className='fa-solid fa-volume-off volume-icon'
+                }else if(volumeValue < 40){
+                    volumeIcon.className='fa-solid fa-volume-low volume-icon'
+                }
+                else{
+                    volumeIcon.className='fa-solid fa-volume-high volume-icon'
+                }
+            },
+
             start: function(){
                 // Dinh nghia cac thuoc tinh cho obj
                 this.defineProperties()
@@ -415,6 +458,8 @@
                 this.handleEvents()
                 //  Tai thong tin bai hat vao UI khi chay ung dung
                 this.loadCurrentSong()
+                // Lay thoi gian thuc
+                this.currentTime()
                 // Render playlist
                 this.render()
             },
